--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -120,8 +120,7 @@
           </ul>
         </div>
 
-        <div class="action-content">
-          <img src="images/custom-package.jpg" alt="Custom Package Image" class="custom-image">
+        <div class="action-content" style="margin-top: 5%;">
           <a href="booking.html?package=Custom" class="btn-primary large-cta">
             <i class="fas fa-pen-fancy"></i> Request Custom Package Quote
           </a>
