added booking dashboard

--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -15,6 +15,7 @@
     <a href="index.html">Home</a>
     <a href="tours.html" class="active">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
+    <a href="booking-dashboard.html" >My Bookings</a>
     <a href="contact.html">Contact</a>
   </nav>
   <div class="auth-links" id="authLinks">
