--- a/frontend/car-rentals.html
+++ b/frontend/car-rentals.html
@@ -17,6 +17,7 @@
     <a href="index.html">Home</a>
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html" class="active">Car Rentals</a>
+    <a href="booking-dashboard.html" >My Bookings</a>
     <a href="contact.html">Contact</a>
   </nav>
   <div class="auth-links" id="authLinks">
