--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -15,6 +15,7 @@
     <a href="index.html">Home</a>
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
+    <a href="booking-dashboard.html" >My Bookings</a>
     <a href="contact.html" class="active">Contact</a>
   </nav>
   <div class="auth-links" id="authLinks">
