--- a/frontend/login.html
+++ b/frontend/login.html
@@ -46,6 +46,7 @@
     <a href="index.html">Home</a>
     <a href="tours.html">Tours</a>
     <a href="car-rentals.html">Car Rentals</a>
+    <a href="booking-dashboard.html" >My Bookings</a>
     <a href="contact.html">Contact</a>
   </nav>
   <div class="auth-links" id="authLinks">
