added admin page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
     <a href="car-rentals.html">Car Rentals</a>
     <a href="booking-dashboard.html" >My Bookings</a>
     <a href="contact.html">Contact</a>
+    <a href="admin.html">Admin</a>
   </nav>
   <div class="auth-links" id="authLinks">
     <!-- Auth UI injected by auth.js -->
