--- a/frontend/login.html
+++ b/frontend/login.html
@@ -90,7 +90,7 @@
       </button>
 
       <p class="alt-action">
-        Don't have an account?
+        <a href="admin-login.html" style="color: #dc3545;"><pre>Admin-Login                            </pre></a>
         <a href="register.html" class="auth-link">Sign Up Here</a>
       </p>
 
